--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "web3.storage": "^3.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
